objects/RES_Partner_Contact_Role__c.object
<CustomObject>
    <description>Vertiba 2/18/2014 - Created to track the contacts associated to a partner</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Contact Roles</relationshipLabel>
        <relationshipName>Partner_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Project_Partner__r.Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Development__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Development</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipLabel>Partner Contact Roles</relationshipLabel>
        <relationshipName>Partner_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Partner__c</fullName>
        <label>Project Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project_Development__c</field>
                <operation>equals</operation>
                <valueField>Partners__c.RES_Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Partners__c</referenceTo>
        <relationshipLabel>Partner Contact Roles</relationshipLabel>
        <relationshipName>Partner_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Community Member</fullName>
                </value>
                <value>
                    <fullName>Constructor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Developer/Owner/Operator</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Financier / Lender</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Insurer</fullName>
                </value>
                <value>
                    <fullName>Land Agent</fullName>
                </value>
                <value>
                    <fullName>Landowner</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-statutory Consultee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Statutory Consultee</fullName>
                </value>
                <value>
                    <fullName>Technology Provider</fullName>
                </value>
                <value>
                    <fullName>Trade Body</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Contact Role</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>